@startuml OnlineStoreInformationSystem

!define ENTITY class

title Domain model class diagram  "Online Store Information System"

ENTITY Order {
  - OrderID
  - OrderDate
  - OrderStatus
  - {PaymentMethod}
  - {DeliveryMethod}
  - {Product}
  - {PaymentMethod}
  - {CustomerAddress}
}

ENTITY Customer {
  - CustomerID
  - Name
  - Surname
  - DateOfBirth
  - Email
  - Password
  - {ClientAddress}
  - {Order}
}

ENTITY CustomerAddress {
  - AddressID
  - Country
  - City
  - PostalCode
  - Street
  - Home
  - Apartment
}

ENTITY PaymentMethod {
  - PaymentMethodID
  - MethodType
}

ENTITY DeliveryMethod {
  - DeliveryMethodID
  - MethodType
}

ENTITY Product {
  - ProductID
  - Title
  - Price
  - Category
  - Brand
  - Color
  - Weight
  - Volume
  - QuantityInStock
}

ENTITY PaymentStatus {
  - PaymentStatusID
  - Status
}


Customer "1" -- "0..*" Order
Order "1" -- "1" CustomerAddress
Order "1" -- "1..3" PaymentMethod
Order "1" -- "1..2" DeliveryMethod
Order "1" -- "0..*" Product
Order "1" -- "1" PaymentStatus
Customer "1" -- "0..*" CustomerAddress

@enduml
